--- a/css/latenight.css
+++ b/css/latenight.css
@@ -7,13 +7,23 @@ html {
 } 
                     
 body { 
-    padding-top: 70px; 
+    padding-top: 20px; 
     padding-left: 40px; 
     padding-right: 40px; 
     padding-bottom: 10px; 
     font-size: 16px; 
     background-color: transparent; 
     background: transparent; 
+}
+
+@media only screen and (max-width: 640px) {
+    body {
+        padding-top: 10px; 
+        padding-left: 20px; 
+        padding-right: 20px; 
+        padding-bottom: 40px;
+        font-size: 14px;
+    }
 }
  
 .git-ribbon {
